move files around, comment out SQL part of ETL file

--- a/Cleaning/ETL.ipynb
+++ b/Cleaning/ETL.ipynb
@@ -2116,10 +2116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Engine for census data\n",
-    "path = \"../GameData.sqlite\"\n",
-    "engine = create_engine(f\"sqlite:///{path}\")\n",
-    "conn = engine.connect()"
+    "# # Create Engine for census data\n",
+    "# path = \"../GameData.sqlite\"\n",
+    "# engine = create_engine(f\"sqlite:///{path}\")\n",
+    "# conn = engine.connect()"
    ]
   },
   {
@@ -2128,7 +2128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players.reset_index().to_sql(\"player\", con = conn, if_exists = 'replace')"
+    "# players.reset_index().to_sql(\"player\", con = conn, if_exists = 'replace')"
    ]
   },
   {
@@ -2137,7 +2137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nonplayers.reset_index().to_sql(\"nonplayer\", con = conn, if_exists = 'replace')"
+    "# nonplayers.reset_index().to_sql(\"nonplayer\", con = conn, if_exists = 'replace')"
    ]
   },
   {
@@ -2146,7 +2146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdata3.reset_index().to_sql(\"game\", con = conn, if_exists = 'replace')"
+    "# gdata3.reset_index().to_sql(\"game\", con = conn, if_exists = 'replace')"
    ]
   },
   {
@@ -2194,12 +2194,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import and establish Base for which classes will be constructed \n",
-    "from sqlalchemy.ext.declarative import declarative_base\n",
-    "Base = declarative_base()\n",
+    "# # Import and establish Base for which classes will be constructed \n",
+    "# from sqlalchemy.ext.declarative import declarative_base\n",
+    "# Base = declarative_base()\n",
     "\n",
-    "# Import modules to declare columns and column data types\n",
-    "from sqlalchemy import Column, Integer, String, Float"
+    "# # Import modules to declare columns and column data types\n",
+    "# from sqlalchemy import Column, Integer, String, Float"
    ]
   },
   {
@@ -2323,23 +2323,23 @@
    "outputs": [],
    "source": [
     "\n",
-    "session = Session(bind=engine)\n",
+    "# session = Session(bind=engine)\n",
     "    \n",
-    "class Player(Base):\n",
-    "    __tablename__ = 'player'\n",
-    "    index = Column(Integer, primary_key = True)\n",
-    "    person = Column(String(255))\n",
-    "    Alignment = Column(String(255))\n",
-    "    fOutcome = Column(String(255))\n",
-    "    Hit1 = Column(String(255)) # FOR NOW \n",
-    "    HitL = Column(String(255))\n",
-    "    Death = Column(String(255))\n",
-    "    Inactive = Column(String(255))\n",
-    "    gtype = Column(String(255))\n",
-    "    GameNum = Column(Float)\n",
-    "    Game = Column(String(255))\n",
-    "    Broken = Column(String(255))\n",
-    "    Role = Column(String(255))\n",
+    "# class Player(Base):\n",
+    "#     __tablename__ = 'player'\n",
+    "#     index = Column(Integer, primary_key = True)\n",
+    "#     person = Column(String(255))\n",
+    "#     Alignment = Column(String(255))\n",
+    "#     fOutcome = Column(String(255))\n",
+    "#     Hit1 = Column(String(255)) # FOR NOW \n",
+    "#     HitL = Column(String(255))\n",
+    "#     Death = Column(String(255))\n",
+    "#     Inactive = Column(String(255))\n",
+    "#     gtype = Column(String(255))\n",
+    "#     GameNum = Column(Float)\n",
+    "#     Game = Column(String(255))\n",
+    "#     Broken = Column(String(255))\n",
+    "#     Role = Column(String(255))\n",
     "\n",
     "    "
    ]
@@ -2350,9 +2350,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import and_, or_, func\n",
-    "from sqlalchemy.orm import Query\n",
-    "from sqlalchemy.dialects import sqlite"
+    "# from sqlalchemy import and_, or_, func\n",
+    "# from sqlalchemy.orm import Query\n",
+    "# from sqlalchemy.dialects import sqlite"
    ]
   },
   {
@@ -2437,15 +2437,15 @@
     }
    ],
    "source": [
-    "me = (\n",
-    "    Query(Player)\n",
-    "    .filter(Player.person == \"Elbereth\")\n",
-    "    .with_session(session)\n",
-    "    .with_entities(Player.Game, Player.fOutcome)\n",
-    "    .all()\n",
-    ")\n",
+    "# me = (\n",
+    "#     Query(Player)\n",
+    "#     .filter(Player.person == \"Elbereth\")\n",
+    "#     .with_session(session)\n",
+    "#     .with_entities(Player.Game, Player.fOutcome)\n",
+    "#     .all()\n",
+    "# )\n",
     "\n",
-    "me"
+    "# me"
    ]
   },
   {
