delete old unused files and code

--- a/Cleaning/ET_notL.ipynb
+++ b/Cleaning/ET_notL.ipynb
@@ -2101,6 +2101,9 @@
    "metadata": {},
    "source": [
     "## PART 3: LOAD\n",
+    "See `ToMongo.ipynb`. This held code putting the data into a SQL database before I decided to use Mongo instead. \n",
+    "\n",
+    "\n",
     "FURTHER WORK:\n",
     "\n",
     "1) Get SQLAlchemy classes working to play with data\n",
@@ -2108,45 +2111,6 @@
     "2) Analyze from SQL data; create aggregations that mimic Main/GameStats/etc\n",
     "\n",
     "3) Create a Flask app or site to display visualizations. Interactive? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create Engine for census data\n",
-    "# path = \"../GameData.sqlite\"\n",
-    "# engine = create_engine(f\"sqlite:///{path}\")\n",
-    "# conn = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# players.reset_index().to_sql(\"player\", con = conn, if_exists = 'replace')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nonplayers.reset_index().to_sql(\"nonplayer\", con = conn, if_exists = 'replace')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gdata3.reset_index().to_sql(\"game\", con = conn, if_exists = 'replace')"
    ]
   },
   {
@@ -2169,283 +2133,6 @@
     "\n",
     "\n",
     "for now"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# TODO: Set up classes for easy addition of rows; figure out easy updating; put pretty things into Flask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Import and establish Base for which classes will be constructed \n",
-    "# from sqlalchemy.ext.declarative import declarative_base\n",
-    "# Base = declarative_base()\n",
-    "\n",
-    "# # Import modules to declare columns and column data types\n",
-    "# from sqlalchemy import Column, Integer, String, Float"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person</th>\n",
-       "      <th>GM</th>\n",
-       "      <th>Mod</th>\n",
-       "      <th>Spec</th>\n",
-       "      <th>gtype</th>\n",
-       "      <th>GameNum</th>\n",
-       "      <th>Game</th>\n",
-       "      <th>Broken</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Meta</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Windy</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Weiry</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Alvron</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Meta</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>LG2</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    person GM Mod Spec gtype  GameNum Game Broken\n",
-       "0     Meta  Y   N    N    LG      1.0  LG1      N\n",
-       "17   Windy  N   N    Y    LG      1.0  LG1      N\n",
-       "18   Weiry  N   N    Y    LG      1.0  LG1      N\n",
-       "19  Alvron  N   N    Y    LG      1.0  LG1      N\n",
-       "20    Meta  Y   N    N    LG      2.0  LG2      N"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nonplayers.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# session = Session(bind=engine)\n",
-    "    \n",
-    "# class Player(Base):\n",
-    "#     __tablename__ = 'player'\n",
-    "#     index = Column(Integer, primary_key = True)\n",
-    "#     person = Column(String(255))\n",
-    "#     Alignment = Column(String(255))\n",
-    "#     fOutcome = Column(String(255))\n",
-    "#     Hit1 = Column(String(255)) # FOR NOW \n",
-    "#     HitL = Column(String(255))\n",
-    "#     Death = Column(String(255))\n",
-    "#     Inactive = Column(String(255))\n",
-    "#     gtype = Column(String(255))\n",
-    "#     GameNum = Column(Float)\n",
-    "#     Game = Column(String(255))\n",
-    "#     Broken = Column(String(255))\n",
-    "#     Role = Column(String(255))\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sqlalchemy import and_, or_, func\n",
-    "# from sqlalchemy.orm import Query\n",
-    "# from sqlalchemy.dialects import sqlite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# weights = (\n",
-    "#     Query(Player)\n",
-    "#     #.join(X, X.player_id = BaseballPlayer.player_id) or whatever\n",
-    "#     .filter(and_(birth_year < 1990, birth_country == \"USA\"))\n",
-    "#     .with_session(session)\n",
-    "#     .with_entities(BaseballPlayer.birth_country,\n",
-    "#                    func.min(BaseballPlayer.weight)) \n",
-    "#     .group_by(BaseballPlayer.birth_country) #\n",
-    "#     .all()\n",
-    "# )\n",
-    "\n",
-    "# weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('LG15.1', 'L'),\n",
-       " ('LG15.2', 'W'),\n",
-       " ('MR10', 'L'),\n",
-       " ('AG2', 'L'),\n",
-       " ('QF12', 'L'),\n",
-       " ('LG16', 'W'),\n",
-       " ('MR11', 'W'),\n",
-       " ('LG17', 'W'),\n",
-       " ('QF13', 'W'),\n",
-       " ('LG18', 'W'),\n",
-       " ('MR12', 'W'),\n",
-       " ('QF14', 'D'),\n",
-       " ('LG20', 'L'),\n",
-       " ('QF15', 'W'),\n",
-       " ('LG21', 'L'),\n",
-       " ('LG22', 'W'),\n",
-       " ('QF16', 'W'),\n",
-       " ('LG23', 'W'),\n",
-       " ('MR15', 'W'),\n",
-       " ('LG24', 'L'),\n",
-       " ('QF17', 'L'),\n",
-       " ('MR16', 'W'),\n",
-       " ('MR17', 'L'),\n",
-       " ('LG27', 'D'),\n",
-       " ('QF19', 'W'),\n",
-       " ('LG28', 'L'),\n",
-       " ('MR18', 'L'),\n",
-       " ('AG3', 'L'),\n",
-       " ('LG30', 'L'),\n",
-       " ('QF22', 'L'),\n",
-       " ('QF23', 'W'),\n",
-       " ('LG35', 'W'),\n",
-       " ('MR23', 'W'),\n",
-       " ('LG37', 'D'),\n",
-       " ('LG39', 'L'),\n",
-       " ('LG43', 'L'),\n",
-       " ('LG46', 'L'),\n",
-       " ('QF39', 'L'),\n",
-       " ('LG60', 'L'),\n",
-       " ('QF40.1', 'L'),\n",
-       " ('QF40.2', 'L'),\n",
-       " ('LG61', 'W'),\n",
-       " ('LG62', 'W'),\n",
-       " ('QF44', 'W'),\n",
-       " ('LG67', 'L'),\n",
-       " ('MR43', 'L')]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# me = (\n",
-    "#     Query(Player)\n",
-    "#     .filter(Player.person == \"Elbereth\")\n",
-    "#     .with_session(session)\n",
-    "#     .with_entities(Player.Game, Player.fOutcome)\n",
-    "#     .all()\n",
-    "# )\n",
-    "\n",
-    "# me"
    ]
   },
   {
