add comments (mostly todos) to ET_notL

--- a/Cleaning/ET_notL.ipynb
+++ b/Cleaning/ET_notL.ipynb
@@ -7,11 +7,7 @@
    "outputs": [],
    "source": [
     "# imports\n",
-    "import pandas as pd\n",
-    "\n",
-    "import sqlalchemy\n",
-    "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, inspect, func"
+    "import pandas as pd"
    ]
   },
   {
@@ -21,18 +17,16 @@
     "## PART 1: EXTRACT\n",
     "\n",
     "source: https://docs.google.com/spreadsheets/d/1CxrgdT4Xd8J0N3CuVmkVRryMeIdm93H8rzv8-YlP0kw/\n",
+    "(DataTest and GameStats tabs)\n",
     "\n",
     "FURTHER WORK:\n",
-    "Web scraping info - 17S turnovers? Votes? GM sheets? Player post counts?\n",
+    "* Web scraping info - 17S turnovers? Votes (ML?)? GM sheets? Player post counts? \n",
+    "* Add Sheets API pull to automate extraction [once sheet is fully formatted]\n",
     "\n",
-    "Add Sheets API pull to automate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Player data ('Data Test' tab)*"
+    "---\n",
+    "\n",
+    "\n",
+    "___Player Data ('Data Test' tab)___"
    ]
   },
   {
@@ -257,7 +251,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Game data ('Game Stats' tab)*"
+    "---\n",
+    "__*Game data ('GameStats' tab)*__"
    ]
   },
   {
@@ -486,21 +481,16 @@
     "\n",
     "*FURTHER WORK:*\n",
     "\n",
-    "1) Reduce/flatten non-player data into mod/spec/GM tables\n",
+    "1) Reduce/flatten non-player data into mod/spec/GM tables and/or into one column instead of 3\n",
     "\n",
     "2) Remove game data that can be produced by aggregating player data\n",
     "\n",
-    "3) Game data - split 'LG1' etc into two separate columns\n",
+    "3) Deal with blanks in Hit columns and convert to numerical types\n",
     "\n",
-    "4) Deal with blanks in Hit columns and convert to numerical types\n",
+    "4) Flatten further by giving players an ID and putting them somewhere else; provide tables that are basically keys for alignment, outcome, etc to clarify what they mean (?)\n",
+    "* separate player/playerID table maybe, separate game/gameID table *definitely*\n",
     "\n",
-    "5) Flatten further by giving players an ID and putting them somewhere else; provide tables that are basically keys for alignment, outcome, etc to clarify what they mean (?)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "---\n",
     "### 2A: Player data\n",
     "*Initial cleaning*"
    ]
@@ -729,7 +719,7 @@
     "# Fill in NaN values\n",
     "pdata = pdata.fillna({\"Alignment\": 0, \n",
     "                       \"fOutcome\": 0, \n",
-    "                      \"Hit1\": \"-\", \n",
+    "                      \"Hit1\": \"-\", # TODO: 0 is a valid value so figure out a NA replacement that makes sense (or just. have good data)\n",
     "                      \"HitL\": \"-\", \n",
     "                      \"HitNum\": \"-\", \n",
     "                      \"Inactive\":\"N\", \n",
@@ -741,6 +731,13 @@
     "print(len(pdata))\n",
     "pdata.head()\n"
    ]
+  },
+  {
+   "source": [
+    "*Non-player data*"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -758,11 +755,11 @@
    "source": [
     "# separate out mod/spec/GM into separate table\n",
     "\n",
-    "# get indices of all non-players\n",
+    "# get list of indices of all non-players\n",
     "nonplayers_list = []\n",
     "it = pdata.iterrows()\n",
     "i = 0\n",
-    "while i != 5672:\n",
+    "while i != 5672: # TODO parameterize this??\n",
     "    curr = next(it)\n",
     "    \n",
     "    ifmod = curr[1][\"Mod\"]\n",
@@ -790,11 +787,19 @@
     "nonplayers = nonplayers.filter(nonplayers_list, axis = 0)\n",
     "\n",
     "nonplayers.head()\n",
-    "nonplayers.to_csv(\"../datacsvs/NonPlayerData.csv\", index = False)\n",
+    "nonplayers.to_csv(\"../datacsvs/NonPlayerData.csv\", index = False) # rename to CleanNonplayerData.csv for consistency\n",
     "\n",
-    "# to clean further: combine GM/mod/spec into one column, don't need 'Game' probably\n",
+    "# to clean further: combine GM/mod/spec into one column, don't need 'Game' probably - just have game ID\n",
+    "# probably combining GM/mod/spec should happen in initial sheet\n",
     "# Maybe separate into separate GM/Mod/Spec tables?"
    ]
+  },
+  {
+   "source": [
+    "*Player data*"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -803,7 +808,7 @@
    "outputs": [],
    "source": [
     "# take out nonplayers to create players dataframe\n",
-    "playerlist = [j for j in range(5763) if j not in nonplayers_list]\n",
+    "playerlist = [j for j in range(5763) if j not in nonplayers_list] # TODO again parameterize the length??\n",
     "\n",
     "players = pdata.filter(playerlist, axis = 0)\n",
     "players = players.drop(['GM', 'Mod', 'Spec'], axis = 1)\n",
@@ -1069,7 +1074,7 @@
     "\n",
     "# need to transpose entire thing and set first column to be the column headers\n",
     "# this is a MESS\n",
-    "# maybe when getting data initially, read 1 row first and then feed to pandas? solves header problem partly\n",
+    "# maybe when getting data initially, read 1 row first and then feed to pandas? solves header problem partly -> should be arg in read_csv()\n",
     "\n",
     "cols = gdata0[\"Game Stats\"]\n",
     "\n",
@@ -1104,6 +1109,7 @@
     }
    ],
    "source": [
+    "# rename cols- not for ease of use yet, just for knowing having the faintest clue what they mean\n",
     "cols[0] = \"Game\"\n",
     "cols[2] = 'PlayerNumRank'\n",
     "cols[4] = 'SpecNumRank'\n",
@@ -1336,7 +1342,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdata2 = gdata2.reset_index(drop = True)"
+    "gdata2 = gdata2.reset_index(drop = True)\n",
+    "gdata2.columns"
    ]
   },
   {
@@ -1559,8 +1566,10 @@
     }
    ],
    "source": [
-    "gdata2.columns\n",
     "\n",
+    "\n",
+    "# select wanted columns (ie not the bunch on the right that's there because it's other random data in the original sheet)\n",
+    "# TODO remove that stuff from the sheet? (might be there for conditional formatting though)\n",
     "gdata3 = gdata2[['Game', '# of Players', 'Total Rank', '# of Spectators', 'Rank',\n",
     "       '# of E. Kills', '# of Neutral Evil Kils', '# of V. Kills',\n",
     "       '# of Lynches', '# of FF Deaths', '# of Neutral Deaths',\n",
@@ -1581,8 +1590,8 @@
    },
    "outputs": [],
    "source": [
+    "# drop first initial column and save back to csv\n",
     "gdata3 = gdata3.drop(0, axis = 0)\n",
-    "gdata3.head()\n",
     "\n",
     "# TODO: split 'Game' into # and format\n",
     "gdata3.to_csv('../datacsvs/CleanGameData.csv')"
@@ -1812,11 +1821,22 @@
    ]
   },
   {
+   "source": [
+    "## PART 3: LOAD\n",
+    "See `ToMongo.ipynb`. This held code putting the data into a SQL database before I decided to use Mongo instead. \n",
+    "\n",
+    "(below is initial python analysis & exploration; probably should be deleted)\n",
+    "\n",
+    "-----\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2C: Analysis & Graphs\n",
-    "TODO: pull data from SQL pls"
+    "### Exploratory Analysis\n"
    ]
   },
   {
@@ -2024,7 +2044,6 @@
    "source": [
     "formatnums = formats['GameNum'].value_counts(sort = False)\n",
     "\n",
-    "formatnums\n",
     "\n",
     "fn1 = pd.DataFrame(formatnums)\n",
     "fn1 = fn1.rename(columns = {'GameNum': 'Game #'})\n",
@@ -2063,7 +2082,8 @@
     }
    ],
    "source": [
-    "\n",
+    "# LGs | MRs | QFs\n",
+    "# TODO: linear regression? \n",
     "fig1, (ax1, ax2, ax3) = plt.subplots(ncols = 3, figsize = (15, 5))\n",
     "ax1.scatter(lgnums.index, lgnums)\n",
     "ax2.scatter(mrnums.index, mrnums)\n",
@@ -2089,7 +2109,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Same data as above, but format is color (#TODO: legend??)\n",
     "fig1, ax1 = plt.subplots()\n",
     "ax1.scatter(lgnums.index, lgnums)\n",
     "ax1.scatter(mrnums.index, mrnums)\n",
@@ -2099,19 +2119,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## PART 3: LOAD\n",
-    "See `ToMongo.ipynb`. This held code putting the data into a SQL database before I decided to use Mongo instead. \n",
-    "\n",
-    "\n",
-    "FURTHER WORK:\n",
-    "\n",
-    "1) Get SQLAlchemy classes working to play with data\n",
-    "\n",
-    "2) Analyze from SQL data; create aggregations that mimic Main/GameStats/etc\n",
-    "\n",
-    "3) Create a Flask app or site to display visualizations. Interactive? "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2134,13 +2142,6 @@
     "\n",
     "for now"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2159,7 +2160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
