clean toMongo slightly and add comments (mostly todos)

--- a/Cleaning/ET_notL.ipynb
+++ b/Cleaning/ET_notL.ipynb
@@ -490,6 +490,8 @@
     "4) Flatten further by giving players an ID and putting them somewhere else; provide tables that are basically keys for alignment, outcome, etc to clarify what they mean (?)\n",
     "* separate player/playerID table maybe, separate game/gameID table *definitely*\n",
     "\n",
+    "5) Separate this into 3 different clean/transforms? (see `refactored_cleaning`)\n",
+    "\n",
     "---\n",
     "### 2A: Player data\n",
     "*Initial cleaning*"
